# VAD

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.codex/: config.toml
.devcontainer/: devcontainer.json
config/: avenue.yaml  local.yaml  local_track.yaml  local_trackgrid.yaml  prod.yaml
entrypoints/: build_detector_track_cache.py  build_pseudo_track_cache.py  build_track_features.py  evaluate_object_track_vad.py  extract_features.py  inference.py  preprocess.py  run_trackgrid_ablation.py  train.py
notebooks/: Baseline.ipynb  ConditionAblationDiagnostics.ipynb  ContextDiagnostics.ipynb  Diagnostics.ipynb  EDA.ipynb  asdf.ipynb
notebooks/outputs/: chigh_velocity_ablation_current.json  condition_ablation_metrics_flow_dit_fg_bg_768x16_001.json  condition_ablation_report_flow_dit_fg_bg_768x16_001.json  no_ce_ablation_subset_flow_dit_fg_bg_768x16_001.csv  no_ce_ablation_subset_flow_dit_fg_bg_768x16_001.json  zero_ce_ablation_subset_flow_dit_aligned_grid_001.csv  zero_ce_ablation_subset_flow_dit_aligned_grid_001.json
src/: utils.py
src/models/: __init__.py  rgb_patch_dit.py  z_dit.py
src/pipelines/: __init__.py  detector_track_cache_builder.py  feature_eng_pipeline.py  feature_extraction_pipeline.py  inference_pipeline.py  init.py  object_track_cache_builder.py  object_track_pipeline.py  object_track_vad_pipeline.py  rgb_patch_pipeline.py  trackgrid_ablation_pipeline.py  training_pipeline.py  z_dit_pipeline.py
tests/: init.py  test_detector_track_cache_builder.py  test_feature_eng_pipeline.py  test_feature_extraction_pipeline.py  test_object_track_cache_builder.py  test_object_track_pipeline.py  test_object_track_vad_pipeline.py  test_pipeline_connectivity.py  test_rgb_patch_dit.py  test_rgb_patch_pipeline.py  test_trackgrid_ablation_pipeline.py  test_z_dit_pipeline.py
