[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vad"
version = "0.1.0"
requires-python= ">=3.12"
dependencies = [
    "torch",            ##있음
    "numpy",            ##있음
    "scikit-learn",
    "scipy",            ##있음
    "pillow",           ##있음
    "pyyaml",           ##있음
    "tqdm",             ##있음
    "opencv-python-headless",
]

[project.optional-dependencies]
dev = [
    "ipykernel",        ##있음
    "jupyterlab",       ##있음
    "nbformat",         ##있음
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--import-mode=importlib"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "entrypoints", "tests"]
exclude = ["notebooks", "data", ".git", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
